@@ -1,3 +1,6 @@
+Put the padding after the end option so we work with old style BOOTP servers
+again.
+
 dhcpcd-3.0.18
 Fix ClientID's - doh.
 Fix adding of routes on the BSDs.
